==> NSJ-student/MP3_player/Src/TouchPanel/TouchPanel.c <==
#include "TouchPanel/TouchPanel.h"
#include "TouchPanel/config.h"
#include "GLCD/GLCD.h"
#include "stm32f4xx_hal.h"
#define OPENCV 0
#define THRESHOLD 2

static void WR_CMD (uint8_t cmd)  
{ 
#if OPENCV == 1
  /* Wait for SPI3 Tx buffer empty */ 
  while (hspi2.Instance->SR & SPI_FLAG_TXE != SPI_FLAG_TXE); 
  /* Send SPI3 data */ 
  *((__IO uint8_t*)&hspi2.Instance->DR) = cmd;
  /* Wait for SPI3 data reception */ 
  while (hspi2.Instance->SR & SPI_FLAG_RXNE != SPI_FLAG_RXNE); 
  /* Read Open_SPI received data */ \
  hspi2.Instance->DR;
#else	
	SPISend = cmd;
	HAL_SPI_TransmitReceive(&hspi2, &SPISend, &SPIRecv,1, 100);
#endif
}

static int RD_AD(void)  
{ 
  unsigned short buf;
  unsigned char temp;
#if OPENCV == 1
  /* Wait for SPI3 Tx buffer empty */ 
  while (hspi2.Instance->SR & SPI_FLAG_TXE != SPI_FLAG_TXE); 
  /* Send SPI3 data */ 
  *((__IO uint8_t*)&hspi2.Instance->DR) = 0;
  /* Wait for SPI3 data reception */ 
  while (hspi2.Instance->SR & SPI_FLAG_RXNE != SPI_FLAG_RXNE); 
  /* Read Open_SPI received data */ \
  temp = hspi2.Instance->DR;
#else	
	SPISend = 0;
	HAL_SPI_TransmitReceive(&hspi2, &SPISend, &SPIRecv,1, 100);
	temp = SPIRecv;
#endif
  buf=temp<<8; 
  DelayUS(1); 
#if OPENCV == 1
  /* Wait for SPI3 Tx buffer empty */ 
  while (hspi2.Instance->SR & SPI_FLAG_TXE != SPI_FLAG_TXE); 
  /* Send SPI3 data */ 
  *((__IO uint8_t*)&hspi2.Instance->DR) = 0;
  /* Wait for SPI3 data reception */ 
  while (hspi2.Instance->SR & SPI_FLAG_RXNE != SPI_FLAG_RXNE); 
  /* Read Open_SPI received data */ 
  temp = hspi2.Instance->DR;
#else	
	SPISend = 0;
	HAL_SPI_TransmitReceive(&hspi2, &SPISend, &SPIRecv,1, 100);
	temp = SPIRecv;
#endif
  buf |= temp; 
  buf>>=3; 
  buf&=0xfff; 
  return buf; 
}

void DrawCross(uint16_t Xpos,uint16_t Ypos)
{
  LCD_DrawLine(Xpos-15,Ypos,Xpos-2,Ypos,0xffff);
  LCD_DrawLine(Xpos+2,Ypos,Xpos+15,Ypos,0xffff);
  LCD_DrawLine(Xpos,Ypos-15,Xpos,Ypos-2,0xffff);
  LCD_DrawLine(Xpos,Ypos+2,Xpos,Ypos+15,0xffff);
  
  LCD_DrawLine(Xpos-15,Ypos+15,Xpos-7,Ypos+15,RGB565CONVERT(184,158,131));
  LCD_DrawLine(Xpos-15,Ypos+7,Xpos-15,Ypos+15,RGB565CONVERT(184,158,131));

  LCD_DrawLine(Xpos-15,Ypos-15,Xpos-7,Ypos-15,RGB565CONVERT(184,158,131));
  LCD_DrawLine(Xpos-15,Ypos-7,Xpos-15,Ypos-15,RGB565CONVERT(184,158,131));

  LCD_DrawLine(Xpos+7,Ypos+15,Xpos+15,Ypos+15,RGB565CONVERT(184,158,131));
  LCD_DrawLine(Xpos+15,Ypos+7,Xpos+15,Ypos+15,RGB565CONVERT(184,158,131));

  LCD_DrawLine(Xpos+7,Ypos-15,Xpos+15,Ypos-15,RGB565CONVERT(184,158,131));
  LCD_DrawLine(Xpos+15,Ypos-15,Xpos+15,Ypos-7,RGB565CONVERT(184,158,131));	  	
}

void TouchPanel_Calibrate(void)
{
  uint8_t i;
  Coordinate * Ptr;

  for(i=0;i<3;i++)
  {
   LCD_Clear(Black);
   GUI_Text(44,10,"Touch crosshair to calibrate",White,Black);
   delay_ms(300);
   DrawCross(DisplaySample[i].x,DisplaySample[i].y);
   do
   {
     Ptr=Read_Ads7846();
   }
   while( Ptr == (void*)0 );
   ScreenSample[i].x= Ptr->x; ScreenSample[i].y= Ptr->y;
  }
  setCalibrationMatrix( &DisplaySample[0],&ScreenSample[0],&matrix );
  LCD_Clear(Black);
}
